<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Routeplaner.SecondscreenRouteplaner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/identifyRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/destination_first"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/identifyRoute"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/start"
        android:textColor="@color/textColor"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/destination_first"
        android:layout_above="@+id/enter_destination">
    </android.support.v7.widget.RecyclerView>

    <EditText
        android:id="@+id/enter_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/transportation_dropdown"
        android:layout_toStartOf="@+id/add_button"
        android:hint="@string/next_destination"
        android:inputType="text"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/add_destination" />

    <Spinner
        android:id="@+id/transportation_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/add_button"
        android:entries="@array/transportation"/>

</RelativeLayout>